2006-02-28  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/ServiceUIFactory.java: Added documentation to class.

2006-02-28  Anthony Balkissoon  <abalkiss@redhat.com>

	PR classpath/26434
	* javax/swing/DefaultListSelectionModel.java:
	(addSelectionInterval): Return early if either of the arguments is -1.
	(removeSelectionInterval): Likewise.
	(setSelectionInterval): Likewise.

2006-02-28  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultFormatter.java
	(stringToValue): Added NPE check.

2006-02-28  Roman Kennke  <kennke@aicas.com>

	PR classpath/25675
	* javax/swing/JList.java
	(getPreferredScrollableViewportSize): Restored specified behaviour.
	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(createList): Set filelist panel's preferredSize, so that it doesn't
	get size into infinity for big lists.

2006-02-28  Lillian Angel  <langel@redhat.com>

	* javax/swing/ViewportLayout.java
	(layoutContainer): Should not extend container to be 
	minimum size. Mauve test shows that the preferred size
	and the size of the viewport can be set smaller than
	the minimum.

2006-02-28  Lillian Angel  <langel@redhat.com>

	PR classpath/25675
	* javax/swing/JList.java
	(getPreferredScrollableViewportSize): Added a check to determine
	if orientation is VERTICAL_WRAP. If it is, we should only 
	show 3 columns. 

2006-02-28  Lillian Angel  <langel@redhat.com>

	PR classpath/26003
	* javax/swing/ViewportLayout.java:
	Patch submitted by Audrius Meskauskas
	(addLayoutComponent): Added documentation.
	(removeLayoutComponent): Likewise.
	(preferredLayoutSize): Likewise.
	(minimumLayoutSize): Likewise.
	(layoutContainer): Fixed code, so view is set
	to the right position when inside a scrollpane.	

2006-02-28  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigInteger.java:
	Committed patch by Rafael: 
	developer.classpath.org/pipermail/classpath-patches/
	2006-February/000473.html
	(signum): Return early 0 if words == null and ival == 0.